ecommerce| fix cart overflow issue

--- a/src/assets/scss/_base.scss
+++ b/src/assets/scss/_base.scss
@@ -37,7 +37,6 @@ body {
   color: $base-white;
   font-weight: 400;
   line-height: 1.6;
-  min-height: 100vh;
   font-size: 1.5rem;
   // opacity: 0.5;
   // background: #1d2026;
